# fullstack-prac

./: .gitignore  README.md
.reasonix/truncated-results/: 1780730029042-9c5c2213-web_fetch.txt  1780731420750-bc4245df-run_command.txt
Enterprise-RAG/backend/: pyproject.toml  run.py
Enterprise-RAG/backend/app/: config.py  database.py  main.py  schemas.py
Enterprise-RAG/backend/app/api/: documents.py  qa_engine.py  search.py
Enterprise-RAG/backend/app/models/: qa_schemas.py  rag_schemas.py  vector_db.py
Enterprise-RAG/backend/app/services/: embedding_engine.py  llm_engine.py
Enterprise-RAG/frontend/: package-lock.json
Enterprise-RAG/frontend/src/: App.tsx
Enterprise-RAG/frontend/src/components/: FileDropZone.tsx  KnowledgeChatWorkbench.tsx  VectorPlayground.tsx
Enterprise-RAG/frontend/src/services/: api.ts
ai-chatroom/: package-lock.json
ai-chatroom/backend/: main.py  pyproject.toml  schemas.py
ai-chatroom/frontend/: vite.config.ts
ai-chatroom/frontend/src/: App.tsx  api.ts  types.ts
ai-chatroom/frontend/src/components/: ChatBubble.tsx
knowledge/: ai-agent-knowledge-base.md
smart-task-board/: docker-compose.yml
smart-task-board/backend/: Dockerfile  database.py  main.py  models.py  pyproject.toml  schemas.py
smart-task-board/frontend/: Dockerfile  package-lock.json
smart-task-board/frontend/src/: App.css  App.tsx  api.ts  task.type.ts
smart-task-board/frontend/src/components/: TaskBoard.tsx
