[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "fastapi>=0.136.3",
    "load-dotenv>=0.1.0",
    "openai>=2.41.0",
    "pgvector>=0.4.2",
    "pydantic>=2.13.4",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "ujson>=5.12.1",
    "arq>=0.28.0",
]
