[project]
name = "smart-task-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
